--- a/CicloDeVida/app/src/main/AndroidManifest.xml
+++ b/CicloDeVida/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.CicloDeVida"
         tools:targetApi="31">
         <activity
+            android:name=".Activity4"
+            android:exported="false" />
+        <activity
+            android:name=".Activity3"
+            android:exported="false" />
+        <activity
             android:name=".Activity2"
             android:exported="false" />
         <activity
