--- a/PersistenciaDatos/gradle/libs.versions.toml
+++ b/PersistenciaDatos/gradle/libs.versions.toml
@@ -9,6 +9,7 @@ activity = "1.10.0"
 constraintlayout = "2.2.0"
 securityCrypto = "1.1.0-alpha06"
 preference = "1.2.1"
+sqliteassethelper = "2.0.1"
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -20,6 +21,7 @@ activity = { group = "androidx.activity", name = "activity", version.ref = "acti
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 security-crypto = { group = "androidx.security", name = "security-crypto", version.ref = "securityCrypto" }
 preference = { group = "androidx.preference", name = "preference", version.ref = "preference" }
+sqliteassethelper = { module = "com.readystatesoftware.sqliteasset:sqliteassethelper", version.ref = "sqliteassethelper" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
