--- a/BiblioTeisAndroid/app/src/main/AndroidManifest.xml
+++ b/BiblioTeisAndroid/app/src/main/AndroidManifest.xml
@@ -1,19 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:networkSecurityConfig="@xml/network_security_config"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BiblioTeisAndroid"
-        tools:targetApi="31">
+        tools:targetApi="35">
+        <activity
+            android:name=".UserView"
+            android:exported="false" />
+        <activity
+            android:name=".BookDetailView"
+            android:exported="false" />
+        <activity android:name=".MainView"
+            android:exported="false"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -23,7 +32,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.example.appbiblioteis.MainView" />
     </application>
 
 </manifest>
