--- a/BiblioTeisAndroid/gradle/libs.versions.toml
+++ b/BiblioTeisAndroid/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ constraintlayout = "2.2.0"
 retrofit = "2.9.0"
 gson = "2.8.8"
 okhttp = "4.9.0"
+securityCrypto = "1.0.0"
 
 [libraries]
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
@@ -23,6 +24,7 @@ activity = { group = "androidx.activity", name = "activity", version.ref = "acti
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
+security-crypto = { group = "androidx.security", name = "security-crypto", version = "1.1.0-alpha06" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
